# tacreg

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
tacreg/: __init__.py  tacreg.py
test/units/: test_import.py
